# vi5.aux2

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  aviutl2.toml  buf.gen.yaml  buf.yaml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/vi5-aux2/: Cargo.toml
crates/vi5-aux2/src/: lib.rs  module.rs  script.lua
crates/vi5-cef/: Cargo.toml  build.rs
crates/vi5-cef-server/: Cargo.toml  build.rs
crates/vi5-cef-server/src/: cef_app.rs  gpu_capture.rs  handlers.rs  main.rs  protocol.rs  render_loop.rs  server.rs  shader.wgsl  types.rs
crates/vi5-cef/src/: cef_app.rs  client.rs  convert.rs  gpu_capture.rs  handlers.rs  lib.rs  main.rs  protocol.rs  render_loop.rs  types.rs
example/simple/: index.html  package.json
example/simple/src/: main.ts
examples/simple/: package.json  vi5.config.ts
examples/simple/src/: style.css
examples/simple/src/objects/: test.object.ts  test2.object.ts  test3.object.ts
protocol/: common.proto  lib-server.proto  server-js.proto
