[package]
name = "vi5-aux2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
aviutl2 = { version = "0.11.2", features = ["serde"] }
futures = "0.3.31"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "process", "fs"] }
vi5-cef.workspace = true
