[package]
name = "vi5-aux2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
# aviutl2 = { version = "0.11.2", features = ["serde"] }
aviutl2 = { features = ["serde"], git = "https://github.com/sevenc-nanashi/aviutl2-rs" }
dashmap = "6.1.0"
futures = "0.3.31"
native-dialog = { version = "0.9.6", features = ["async"] }
process_path = "0.1.4"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tap = "1.0.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "process", "fs"] }
vi5-cef.workspace = true
